# routes/bookClubRoutes.js
@@ -9,15 +9,12 @@ const {
 } = require('../controllers/bookClubController');
 const { bookClubValidationRules, validate } = require('../middleware/validator');
 const { isAuthenticated } = require("../middleware/authenticate");
-/* #swagger.tags = ['BookClub'] */ //Need these so the correct routes will generate on api-docs
 
 //GET route for all book club months
 bookClubRouter.get('/', getAllBookClubMonths);
-/* #swagger.path = '/bookClub' */
 
 //GET route for single book club entry
 bookClubRouter.get('/:id', getOneBookClubMonth);
-/* #swagger.path = '/bookClub/{id}' */
 
 //POST route to create new book club entry
 bookClubRouter.post(
@@ -26,7 +23,6 @@ bookClubRouter.post(
     bookClubValidationRules(),
     validate,
     createBookClubMonth);
-/* #swagger.path = '/bookClub' */
 
 //PUT route to update a book club entry
 bookClubRouter.put('/:id',
@@ -47,10 +43,8 @@ bookClubRouter.put('/:id',
     bookClubValidationRules(),
     validate,
     updateBookClubMonth);
-/* #swagger.path = '/bookClub/{id}' */
 
 //DELETE route to delete a book club entry
 bookClubRouter.delete('/:id', isAuthenticated, deleteBookClubMonth);
-/* #swagger.path = '/bookClub/{id}' */
 
 module.exports = bookClubRouter;
