# routes/membersRoutes.js
@@ -9,15 +9,12 @@ const {
 } = require('../controllers/membersController');
 const { memberValidationRules, validate } = require('../middleware/validator')
 const { isAuthenticated } = require("../middleware/authenticate");
-/* #swagger.tags = ['Members'] */ //Need these so api-docs will generate routes correctly
 
 //GET route for all members
 membersRouter.get('/', isAuthenticated, getAllMembers);
-/* #swagger.path = '/members' */
 
 //GET route for single member
 membersRouter.get('/:id', isAuthenticated, getSingleMember);
-/* #swagger.path = '/members/{id}' */
 
 //POST route to create new member
 membersRouter.post(
@@ -26,7 +23,6 @@ membersRouter.post(
     memberValidationRules(),
     validate,
     createMember);
-/* #swagger.path = '/members' */
 
 //PUT route to update a member
 membersRouter.put('/:id',
@@ -50,10 +46,8 @@ membersRouter.put('/:id',
     memberValidationRules(),
     validate,
     updateMember);
-/* #swagger.path = '/members/{id}' */
 
 //DELETE route to delete a member
 membersRouter.delete('/:id', isAuthenticated, deleteMember);
-/* #swagger.path = '/members/{id}' */
 
 module.exports = membersRouter;
